some preprocessing for NaN values in kiva

--- a/in_progress/kiva/mpi_region_locations.ipynb
+++ b/in_progress/kiva/mpi_region_locations.ipynb
@@ -176,10 +176,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mpi_region = mpi_region.drop([\"LocationName\", \"geo\"], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Checking for missing values"
    ]
   },
   {
