--- a/in_progress/kiva/theme_ids.ipynb
+++ b/in_progress/kiva/theme_ids.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -13,7 +20,338 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "sns.set()\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Load data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>Loan Theme ID</th>\n",
+       "      <th>Loan Theme Type</th>\n",
+       "      <th>Partner ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>638631</td>\n",
+       "      <td>a1050000000skGl</td>\n",
+       "      <td>General</td>\n",
+       "      <td>151.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>640322</td>\n",
+       "      <td>a1050000000skGl</td>\n",
+       "      <td>General</td>\n",
+       "      <td>151.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>641006</td>\n",
+       "      <td>a1050000002X1ij</td>\n",
+       "      <td>Higher Education</td>\n",
+       "      <td>160.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>641019</td>\n",
+       "      <td>a1050000002X1ij</td>\n",
+       "      <td>Higher Education</td>\n",
+       "      <td>160.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>641594</td>\n",
+       "      <td>a1050000002VbsW</td>\n",
+       "      <td>Subsistence Agriculture</td>\n",
+       "      <td>336.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id    Loan Theme ID          Loan Theme Type  Partner ID\n",
+       "0  638631  a1050000000skGl                  General       151.0\n",
+       "1  640322  a1050000000skGl                  General       151.0\n",
+       "2  641006  a1050000002X1ij         Higher Education       160.0\n",
+       "3  641019  a1050000002X1ij         Higher Education       160.0\n",
+       "4  641594  a1050000002VbsW  Subsistence Agriculture       336.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "theme_ids = pd.read_csv(\"../../data/kiva/loan_theme_ids.csv\")\n",
+    "theme_ids.fillna(np.nan)\n",
+    "theme_ids.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Checking for missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Missing</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <td>0</td>\n",
+       "      <td>779091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Loan Theme ID</th>\n",
+       "      <td>14813</td>\n",
+       "      <td>779091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Loan Theme Type</th>\n",
+       "      <td>14813</td>\n",
+       "      <td>779091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Partner ID</th>\n",
+       "      <td>14813</td>\n",
+       "      <td>779091</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Missing   Total\n",
+       "id                     0  779091\n",
+       "Loan Theme ID      14813  779091\n",
+       "Loan Theme Type    14813  779091\n",
+       "Partner ID         14813  779091"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame({\n",
+    "    \"Total\": len(theme_ids),\n",
+    "    \"Missing\": theme_ids.isnull().sum()\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Drop all NaN rows\n",
+    "\n",
+    "The amount missing is small compared to the total.  Also not much information can be gathered from just the id column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Missing</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <td>0</td>\n",
+       "      <td>764278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Loan Theme ID</th>\n",
+       "      <td>0</td>\n",
+       "      <td>764278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Loan Theme Type</th>\n",
+       "      <td>0</td>\n",
+       "      <td>764278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Partner ID</th>\n",
+       "      <td>0</td>\n",
+       "      <td>764278</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Missing   Total\n",
+       "id                     0  764278\n",
+       "Loan Theme ID          0  764278\n",
+       "Loan Theme Type        0  764278\n",
+       "Partner ID             0  764278"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "theme_ids = theme_ids.dropna()\n",
+    "\n",
+    "pd.DataFrame({\n",
+    "    \"Total\": len(theme_ids),\n",
+    "    \"Missing\": theme_ids.isnull().sum()\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Interesting\n",
+    "\n",
+    "Values for 'Loan Theme ID', 'Loan Theme Type', and 'Partner ID' were all contained in the same rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "779091 - 14813 == 764278"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Also, Partner ID should be an int not a float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
+   "source": [
+    "theme_ids[\"Partner ID\"] = theme_ids[\"Partner ID\"].map(int)"
    ]
   },
   {
@@ -32,9 +370,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "loan_theme_ids = pd.read_csv(\"../data/kiva/loan_theme_ids.csv\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
