--- a/in_progress/kiva/themes_by_region.ipynb
+++ b/in_progress/kiva/themes_by_region.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -17,19 +24,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "loan_themes = pd.read_csv(\"../data/kiva/loan_themes_by_region.csv\")"
+    "### Load data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -193,59 +196,200 @@
        "[3 rows x 21 columns]"
       ]
      },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "loan_themes.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Partner ID', 'Field Partner Name', 'sector', 'Loan Theme ID',\n",
-       "       'Loan Theme Type', 'country', 'forkiva', 'region', 'geocode_old', 'ISO',\n",
-       "       'number', 'amount', 'LocationName', 'geocode', 'names', 'geo', 'lat',\n",
-       "       'lon', 'mpi_region', 'mpi_geo', 'rural_pct'],\n",
-       "      dtype='object')"
-      ]
-     },
      "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "loan_themes.columns"
+    "loan_themes = pd.read_csv(\"../../data/kiva/loan_themes_by_region.csv\")\n",
+    "loan_themes.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Checking for missing values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Missing</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Partner ID</th>\n",
+       "      <td>0</td>\n",
+       "      <td>15736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Field Partner Name</th>\n",
+       "      <td>0</td>\n",
+       "      <td>15736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sector</th>\n",
+       "      <td>0</td>\n",
+       "      <td>15736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Loan Theme ID</th>\n",
+       "      <td>0</td>\n",
+       "      <td>15736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Loan Theme Type</th>\n",
+       "      <td>0</td>\n",
+       "      <td>15736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>country</th>\n",
+       "      <td>0</td>\n",
+       "      <td>15736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>forkiva</th>\n",
+       "      <td>0</td>\n",
+       "      <td>15736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>region</th>\n",
+       "      <td>0</td>\n",
+       "      <td>15736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>geocode_old</th>\n",
+       "      <td>14536</td>\n",
+       "      <td>15736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ISO</th>\n",
+       "      <td>14</td>\n",
+       "      <td>15736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>number</th>\n",
+       "      <td>0</td>\n",
+       "      <td>15736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>amount</th>\n",
+       "      <td>0</td>\n",
+       "      <td>15736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LocationName</th>\n",
+       "      <td>0</td>\n",
+       "      <td>15736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>geocode</th>\n",
+       "      <td>2074</td>\n",
+       "      <td>15736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>names</th>\n",
+       "      <td>2075</td>\n",
+       "      <td>15736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>geo</th>\n",
+       "      <td>0</td>\n",
+       "      <td>15736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lat</th>\n",
+       "      <td>2074</td>\n",
+       "      <td>15736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lon</th>\n",
+       "      <td>2074</td>\n",
+       "      <td>15736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mpi_region</th>\n",
+       "      <td>14</td>\n",
+       "      <td>15736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mpi_geo</th>\n",
+       "      <td>6065</td>\n",
+       "      <td>15736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rural_pct</th>\n",
+       "      <td>1392</td>\n",
+       "      <td>15736</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "No     13211\n",
-       "Yes     2525\n",
-       "Name: forkiva, dtype: int64"
+       "                    Missing  Total\n",
+       "Partner ID                0  15736\n",
+       "Field Partner Name        0  15736\n",
+       "sector                    0  15736\n",
+       "Loan Theme ID             0  15736\n",
+       "Loan Theme Type           0  15736\n",
+       "country                   0  15736\n",
+       "forkiva                   0  15736\n",
+       "region                    0  15736\n",
+       "geocode_old           14536  15736\n",
+       "ISO                      14  15736\n",
+       "number                    0  15736\n",
+       "amount                    0  15736\n",
+       "LocationName              0  15736\n",
+       "geocode                2074  15736\n",
+       "names                  2075  15736\n",
+       "geo                       0  15736\n",
+       "lat                    2074  15736\n",
+       "lon                    2074  15736\n",
+       "mpi_region               14  15736\n",
+       "mpi_geo                6065  15736\n",
+       "rural_pct              1392  15736"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "loan_themes.forkiva.value_counts()"
+    "null_cols = loan_themes[]\n",
+    "\n",
+    "pd.DataFrame({\n",
+    "    \"Total\": len(loan_themes),\n",
+    "    \"Missing\": loan_themes.isnull().sum()\n",
+    "})"
    ]
   },
   {
@@ -2409,84 +2553,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Alalay sa Kaunlaran (ASKI)                                                  1207\n",
-       "SEF International                                                            992\n",
-       "Gata Daku Multi-purpose Cooperative (GDMPC)                                  952\n",
-       "Paglaum Multi-Purpose Cooperative (PMPC)                                     673\n",
-       "Interactuar                                                                  671\n",
-       "Thanh Hoa Microfinance Institution                                           666\n",
-       "South Pacific Business Development (SPBD) - Samoa                            398\n",
-       "Bai Tushum Bank                                                              393\n",
-       "African Clean Energy (ACE)                                                   336\n",
-       "VisionFund Cambodia                                                          324\n",
-       "Cooperativa de Ahorro y CrÍ©dito Norandino                                   320\n",
-       "Vision Fund Mexico                                                           313\n",
-       "Negros Women for Tomorrow Foundation (NWTF)                                  300\n",
-       "Credo                                                                        285\n",
-       "Al Majmoua                                                                   266\n",
-       "Humo                                                                         233\n",
-       "Palestine for Credit & Development (FATEN)                                   227\n",
-       "PADECOMSM                                                                    214\n",
-       "Community Economic Ventures, Inc. (CEVI)                                     213\n",
-       "Kashf Foundation                                                             198\n",
-       "myAgro                                                                       188\n",
-       "AsociaciÍ_n Arariwa                                                          174\n",
-       "Zoona                                                                        164\n",
-       "VisionFund Kenya                                                             157\n",
-       "Apoyo Integral                                                               157\n",
-       "ERES EnergÍ_a Renovable                                                      154\n",
-       "FundaciÍ_n Mario Santo Domingo (FMSD)                                        149\n",
-       "FundaciÍ_n Paraguaya                                                         140\n",
-       "IMON International                                                           139\n",
-       "Milaap                                                                       135\n",
-       "                                                                            ... \n",
-       "N/A, direct to ECEG                                                            1\n",
-       "N/A, direct to Dlo Haiti                                                       1\n",
-       "N/A, direct to EcoZoom                                                         1\n",
-       "N/A, direct to Zonful Energy                                                   1\n",
-       "N/A, direct to Industria del Alimentos Procesados Inalproces S.A. (Kiwa)       1\n",
-       "AsociaciÍ_n Chajulense de Mujeres (ACMUV)                                      1\n",
-       "Building Markets                                                               1\n",
-       "N/A, direct to Vava Coffee                                                     1\n",
-       "N/A, direct to PT Green                                                        1\n",
-       "Nexus For Development                                                          1\n",
-       "Soieries du MÍ©kong                                                            1\n",
-       "N/A, direct to ACTT                                                            1\n",
-       "N/A, direct to Moko Furniture (Watervale Investments)                          1\n",
-       "N/A, direct to Sosai Renewable Energy                                          1\n",
-       "Local Alike                                                                    1\n",
-       "Hilltribe Organics Limited                                                     1\n",
-       "N/A, direct to Vitalite                                                        1\n",
-       "N/A, direct to Prime Cookstoves                                                1\n",
-       "N/A, direct to Kalsada                                                         1\n",
-       "N/A, direct to AKM Glitters                                                    1\n",
-       "Strathmore University                                                          1\n",
-       "N/A direct to LegWorks Inc.                                                    1\n",
-       "Emergency Relief & Development Overseas (ERDO)                                 1\n",
-       "Micro Credit for Development and Transformation SACCO (MCDT SACCO)             1\n",
-       "N/A, direct to Azimuth Group Corp                                              1\n",
-       "Inyenyeri                                                                      1\n",
-       "Pomona Impact                                                                  1\n",
-       "SEVA Microfinance Institute                                                    1\n",
-       "Socios en Salud PerÍ_ (Partners in Health)                                     1\n",
-       "N/A, direct to Global Trauma Project                                           1\n",
-       "Name: Field Partner Name, Length: 302, dtype: int64"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'loan_themes' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-339114129f44>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtarget\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloan_themes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Field Partner Name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'loan_themes' is not defined"
+     ]
     }
    ],
    "source": [
-    "target = loan_themes['Field Partner Name'].value_counts().head(15)\n",
-    "for "
+    "target = loan_themes['Field Partner Name'].value_counts().head(15)"
    ]
   },
   {
