--- a/in_progress/kiva/themes_by_region.ipynb
+++ b/in_progress/kiva/themes_by_region.ipynb
@@ -20,7 +20,11 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "sns.set()\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -384,8 +388,6 @@
     }
    ],
    "source": [
-    "null_cols = loan_themes[]\n",
-    "\n",
     "pd.DataFrame({\n",
     "    \"Total\": len(loan_themes),\n",
     "    \"Missing\": loan_themes.isnull().sum()\n",
