--- a/in_progress/kiva/loans.ipynb
+++ b/in_progress/kiva/loans.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -14,25 +21,370 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "%matplotlib inline\n",
-    "sns.set(rc={'figure.figsize':(12, 6)})"
+    "sns.set(rc={'figure.figsize':(12, 6)})\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>funded_amount</th>\n",
+       "      <th>loan_amount</th>\n",
+       "      <th>activity</th>\n",
+       "      <th>sector</th>\n",
+       "      <th>use</th>\n",
+       "      <th>country_code</th>\n",
+       "      <th>country</th>\n",
+       "      <th>region</th>\n",
+       "      <th>currency</th>\n",
+       "      <th>partner_id</th>\n",
+       "      <th>posted_time</th>\n",
+       "      <th>disbursed_time</th>\n",
+       "      <th>funded_time</th>\n",
+       "      <th>term_in_months</th>\n",
+       "      <th>lender_count</th>\n",
+       "      <th>tags</th>\n",
+       "      <th>borrower_genders</th>\n",
+       "      <th>repayment_interval</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>653051</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>Fruits &amp; Vegetables</td>\n",
+       "      <td>Food</td>\n",
+       "      <td>To buy seasonal, fresh fruits to sell.</td>\n",
+       "      <td>PK</td>\n",
+       "      <td>Pakistan</td>\n",
+       "      <td>Lahore</td>\n",
+       "      <td>PKR</td>\n",
+       "      <td>247.0</td>\n",
+       "      <td>2014-01-01 06:12:39+00:00</td>\n",
+       "      <td>2013-12-17 08:00:00+00:00</td>\n",
+       "      <td>2014-01-02 10:06:32+00:00</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>female</td>\n",
+       "      <td>irregular</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>653053</td>\n",
+       "      <td>575.0</td>\n",
+       "      <td>575.0</td>\n",
+       "      <td>Rickshaw</td>\n",
+       "      <td>Transportation</td>\n",
+       "      <td>to repair and maintain the auto rickshaw used ...</td>\n",
+       "      <td>PK</td>\n",
+       "      <td>Pakistan</td>\n",
+       "      <td>Lahore</td>\n",
+       "      <td>PKR</td>\n",
+       "      <td>247.0</td>\n",
+       "      <td>2014-01-01 06:51:08+00:00</td>\n",
+       "      <td>2013-12-17 08:00:00+00:00</td>\n",
+       "      <td>2014-01-02 09:17:23+00:00</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>female, female</td>\n",
+       "      <td>irregular</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>653068</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>Transportation</td>\n",
+       "      <td>Transportation</td>\n",
+       "      <td>To repair their old cycle-van and buy another ...</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>India</td>\n",
+       "      <td>Maynaguri</td>\n",
+       "      <td>INR</td>\n",
+       "      <td>334.0</td>\n",
+       "      <td>2014-01-01 09:58:07+00:00</td>\n",
+       "      <td>2013-12-17 08:00:00+00:00</td>\n",
+       "      <td>2014-01-01 16:01:36+00:00</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>user_favorite, user_favorite</td>\n",
+       "      <td>female</td>\n",
+       "      <td>bullet</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id  funded_amount  loan_amount             activity          sector  \\\n",
+       "0  653051          300.0        300.0  Fruits & Vegetables            Food   \n",
+       "1  653053          575.0        575.0             Rickshaw  Transportation   \n",
+       "2  653068          150.0        150.0       Transportation  Transportation   \n",
+       "\n",
+       "                                                 use country_code   country  \\\n",
+       "0            To buy seasonal, fresh fruits to sell.            PK  Pakistan   \n",
+       "1  to repair and maintain the auto rickshaw used ...           PK  Pakistan   \n",
+       "2  To repair their old cycle-van and buy another ...           IN     India   \n",
+       "\n",
+       "      region currency  partner_id               posted_time  \\\n",
+       "0     Lahore      PKR       247.0 2014-01-01 06:12:39+00:00   \n",
+       "1     Lahore      PKR       247.0 2014-01-01 06:51:08+00:00   \n",
+       "2  Maynaguri      INR       334.0 2014-01-01 09:58:07+00:00   \n",
+       "\n",
+       "             disbursed_time               funded_time  term_in_months  \\\n",
+       "0 2013-12-17 08:00:00+00:00 2014-01-02 10:06:32+00:00            12.0   \n",
+       "1 2013-12-17 08:00:00+00:00 2014-01-02 09:17:23+00:00            11.0   \n",
+       "2 2013-12-17 08:00:00+00:00 2014-01-01 16:01:36+00:00            43.0   \n",
+       "\n",
+       "   lender_count                          tags borrower_genders  \\\n",
+       "0            12                           NaN           female   \n",
+       "1            14                           NaN   female, female   \n",
+       "2             6  user_favorite, user_favorite           female   \n",
+       "\n",
+       "  repayment_interval        date  \n",
+       "0          irregular  2014-01-01  \n",
+       "1          irregular  2014-01-01  \n",
+       "2             bullet  2014-01-01  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pytz\n",
     "\n",
-    "# dateparse_traffic = lambda x: pd.datetime.strptime(x,             \"%Y-%m-%d %H:%M:%S+%f\")\n",
-    "dateparse = lambda x: pd.datetime.strptime(x[:-3] + \"00\", \"%Y-%m-%d %H:%M:%S%z\").astimezone(pytz.utc)\n",
+    "def dateparse(x):\n",
+    "    if x is not None and type(x) is not float:\n",
+    "        return pd.datetime.strptime(x[:-3] + \"00\", \"%Y-%m-%d %H:%M:%S%z\").astimezone(pytz.utc)\n",
+    "    else:\n",
+    "        return np.nan\n",
     "\n",
-    "loans = pd.read_csv(\"../../data/kiva/kiva_loans.csv\") # ,\n",
-    "#                     parse_dates = ['posted_time', 'disbursed_time', \"funded_time\"],\n",
-    "#                     date_parser = dateparse)\n",
+    "loans = pd.read_csv(\"../../data/kiva/kiva_loans.csv\",\n",
+    "                    parse_dates = ['posted_time', 'disbursed_time', \"funded_time\"],\n",
+    "                    date_parser = dateparse)\n",
     "\n",
     "loans.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Checking for missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Missing</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <td>0</td>\n",
+       "      <td>671205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>funded_amount</th>\n",
+       "      <td>0</td>\n",
+       "      <td>671205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>loan_amount</th>\n",
+       "      <td>0</td>\n",
+       "      <td>671205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>activity</th>\n",
+       "      <td>0</td>\n",
+       "      <td>671205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sector</th>\n",
+       "      <td>0</td>\n",
+       "      <td>671205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>use</th>\n",
+       "      <td>4228</td>\n",
+       "      <td>671205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>country_code</th>\n",
+       "      <td>8</td>\n",
+       "      <td>671205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>country</th>\n",
+       "      <td>0</td>\n",
+       "      <td>671205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>region</th>\n",
+       "      <td>56800</td>\n",
+       "      <td>671205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>currency</th>\n",
+       "      <td>0</td>\n",
+       "      <td>671205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>partner_id</th>\n",
+       "      <td>13507</td>\n",
+       "      <td>671205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>posted_time</th>\n",
+       "      <td>0</td>\n",
+       "      <td>671205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>disbursed_time</th>\n",
+       "      <td>2396</td>\n",
+       "      <td>671205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>funded_time</th>\n",
+       "      <td>48331</td>\n",
+       "      <td>671205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>term_in_months</th>\n",
+       "      <td>0</td>\n",
+       "      <td>671205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lender_count</th>\n",
+       "      <td>0</td>\n",
+       "      <td>671205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tags</th>\n",
+       "      <td>171416</td>\n",
+       "      <td>671205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>borrower_genders</th>\n",
+       "      <td>4221</td>\n",
+       "      <td>671205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>repayment_interval</th>\n",
+       "      <td>0</td>\n",
+       "      <td>671205</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <td>0</td>\n",
+       "      <td>671205</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Missing   Total\n",
+       "id                        0  671205\n",
+       "funded_amount             0  671205\n",
+       "loan_amount               0  671205\n",
+       "activity                  0  671205\n",
+       "sector                    0  671205\n",
+       "use                    4228  671205\n",
+       "country_code              8  671205\n",
+       "country                   0  671205\n",
+       "region                56800  671205\n",
+       "currency                  0  671205\n",
+       "partner_id            13507  671205\n",
+       "posted_time               0  671205\n",
+       "disbursed_time         2396  671205\n",
+       "funded_time           48331  671205\n",
+       "term_in_months            0  671205\n",
+       "lender_count              0  671205\n",
+       "tags                 171416  671205\n",
+       "borrower_genders       4221  671205\n",
+       "repayment_interval        0  671205\n",
+       "date                      0  671205"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame({\n",
+    "    \"Total\": len(loans),\n",
+    "    \"Missing\": loans.isnull().sum()\n",
+    "})"
    ]
   },
   {
