--- a/in_progress/kiva/mpi_region_locations.ipynb
+++ b/in_progress/kiva/mpi_region_locations.ipynb
@@ -21,7 +21,10 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "%matplotlib inline\n",
-    "sns.set()"
+    "sns.set()\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
