kiva - only shows missing cols if values are missing in col

--- a/in_progress/kiva/themes_by_region.ipynb
+++ b/in_progress/kiva/themes_by_region.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -249,46 +249,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Partner ID</th>\n",
-       "      <td>0</td>\n",
-       "      <td>15736</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Field Partner Name</th>\n",
-       "      <td>0</td>\n",
-       "      <td>15736</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sector</th>\n",
-       "      <td>0</td>\n",
-       "      <td>15736</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Loan Theme ID</th>\n",
-       "      <td>0</td>\n",
-       "      <td>15736</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Loan Theme Type</th>\n",
-       "      <td>0</td>\n",
-       "      <td>15736</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>country</th>\n",
-       "      <td>0</td>\n",
-       "      <td>15736</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>forkiva</th>\n",
-       "      <td>0</td>\n",
-       "      <td>15736</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>region</th>\n",
-       "      <td>0</td>\n",
-       "      <td>15736</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>geocode_old</th>\n",
        "      <td>14536</td>\n",
        "      <td>15736</td>\n",
@@ -299,21 +259,6 @@
        "      <td>15736</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>number</th>\n",
-       "      <td>0</td>\n",
-       "      <td>15736</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>amount</th>\n",
-       "      <td>0</td>\n",
-       "      <td>15736</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>LocationName</th>\n",
-       "      <td>0</td>\n",
-       "      <td>15736</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>geocode</th>\n",
        "      <td>2074</td>\n",
        "      <td>15736</td>\n",
@@ -321,11 +266,6 @@
        "    <tr>\n",
        "      <th>names</th>\n",
        "      <td>2075</td>\n",
-       "      <td>15736</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>geo</th>\n",
-       "      <td>0</td>\n",
        "      <td>15736</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -358,39 +298,29 @@
        "</div>"
       ],
       "text/plain": [
-       "                    Missing  Total\n",
-       "Partner ID                0  15736\n",
-       "Field Partner Name        0  15736\n",
-       "sector                    0  15736\n",
-       "Loan Theme ID             0  15736\n",
-       "Loan Theme Type           0  15736\n",
-       "country                   0  15736\n",
-       "forkiva                   0  15736\n",
-       "region                    0  15736\n",
-       "geocode_old           14536  15736\n",
-       "ISO                      14  15736\n",
-       "number                    0  15736\n",
-       "amount                    0  15736\n",
-       "LocationName              0  15736\n",
-       "geocode                2074  15736\n",
-       "names                  2075  15736\n",
-       "geo                       0  15736\n",
-       "lat                    2074  15736\n",
-       "lon                    2074  15736\n",
-       "mpi_region               14  15736\n",
-       "mpi_geo                6065  15736\n",
-       "rural_pct              1392  15736"
+       "             Missing  Total\n",
+       "geocode_old    14536  15736\n",
+       "ISO               14  15736\n",
+       "geocode         2074  15736\n",
+       "names           2075  15736\n",
+       "lat             2074  15736\n",
+       "lon             2074  15736\n",
+       "mpi_region        14  15736\n",
+       "mpi_geo         6065  15736\n",
+       "rural_pct       1392  15736"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "missing_cols = [col for col in loan_themes.columns if any(loan_themes[col].isnull())]\n",
+    "\n",
     "pd.DataFrame({\n",
     "    \"Total\": len(loan_themes),\n",
-    "    \"Missing\": loan_themes.isnull().sum()\n",
+    "    \"Missing\": loan_themes[missing_cols].isnull().sum()\n",
     "})"
    ]
   },
