done with kiva for today

--- a/in_progress/kiva/mpi_region_locations.ipynb
+++ b/in_progress/kiva/mpi_region_locations.ipynb
@@ -33,7 +33,9 @@
     "collapsed": true
    },
    "source": [
-    "### Load data"
+    "### Load data\n",
+    "\n",
+    "What is MPI?  I don't think this data is needed for the full analysis"
    ]
   },
   {
