look at age and starting prediction

--- a/in_progress/shelter/1_start.ipynb
+++ b/in_progress/shelter/1_start.ipynb
@@ -736,13 +736,158 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### AgeuponOutcome"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "46\n",
+      "['1 year' '2 years' '3 weeks' '1 month' '5 months' '4 years' '3 months'\n",
+      " '2 weeks' '2 months' '10 months' '6 months' '5 years' '7 years' '3 years'\n",
+      " '4 months' '12 years' '9 years' '6 years' '1 weeks' '11 years' '4 weeks'\n",
+      " '7 months' '8 years' '11 months' '4 days' '9 months' '8 months' '15 years'\n",
+      " '10 years' '1 week' '0 years' '14 years' '3 days' '6 days' '5 days'\n",
+      " '5 weeks' '2 days' '16 years' '1 day' '13 years' nan '17 years' '18 years'\n",
+      " '19 years' '20 years' '22 years']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(full.AgeuponOutcome.unique()))\n",
+    "print(full.AgeuponOutcome.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         365.0\n",
+       "1         365.0\n",
+       "2         730.0\n",
+       "3          21.0\n",
+       "4         730.0\n",
+       "5          30.0\n",
+       "6          21.0\n",
+       "7          21.0\n",
+       "8         150.0\n",
+       "9         365.0\n",
+       "10        730.0\n",
+       "11        730.0\n",
+       "12       1460.0\n",
+       "13        730.0\n",
+       "14        365.0\n",
+       "15         90.0\n",
+       "16         21.0\n",
+       "17         14.0\n",
+       "18        730.0\n",
+       "19        365.0\n",
+       "20         60.0\n",
+       "21        365.0\n",
+       "22        730.0\n",
+       "23        300.0\n",
+       "24         60.0\n",
+       "25         30.0\n",
+       "26        180.0\n",
+       "27       1825.0\n",
+       "28         60.0\n",
+       "29       2555.0\n",
+       "          ...  \n",
+       "11426    1825.0\n",
+       "11427      60.0\n",
+       "11428    1095.0\n",
+       "11429     730.0\n",
+       "11430      60.0\n",
+       "11431     730.0\n",
+       "11432    1825.0\n",
+       "11433      60.0\n",
+       "11434    2190.0\n",
+       "11435      21.0\n",
+       "11436     150.0\n",
+       "11437     180.0\n",
+       "11438      30.0\n",
+       "11439     730.0\n",
+       "11440       7.0\n",
+       "11441    1460.0\n",
+       "11442     730.0\n",
+       "11443     180.0\n",
+       "11444     730.0\n",
+       "11445      14.0\n",
+       "11446      60.0\n",
+       "11447     365.0\n",
+       "11448      60.0\n",
+       "11449     180.0\n",
+       "11450     300.0\n",
+       "11451      60.0\n",
+       "11452      14.0\n",
+       "11453     365.0\n",
+       "11454    2190.0\n",
+       "11455    1460.0\n",
+       "Name: AgeuponOutcome, Length: 38185, dtype: float64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def format_age(x):\n",
+    "    if x is np.nan:\n",
+    "        return None\n",
+    "    \n",
+    "    num, scale = x.split(\" \")\n",
+    "    if scale in [\"day\", \"days\"]:\n",
+    "        return int(num)\n",
+    "    elif scale in [\"week\", \"weeks\"]:\n",
+    "        return 7 * int(num)\n",
+    "    elif scale in [\"month\", \"months\"]:\n",
+    "        return 30 * int(num)\n",
+    "    elif scale in [\"year\", \"years\"]:\n",
+    "        return 365 * int(num)\n",
+    "    else:\n",
+    "        print(\"scale\", scale)\n",
+    "        raise Exception(\"Scale, {}, not contained\".format(scale))\n",
+    "\n",
+    "train.AgeuponOutcome = train.AgeuponOutcome.map(format_age)\n",
+    "test.AgeuponOutcome = test.AgeuponOutcome.map(format_age)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quick prediction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "train_y = train.OutcomeType\n",
+    "train_x = train.drop([\"OutcomeType\", \"OutcomeSubtype\", \"Outcome\", \"Name\", \"AnimalID\"], axis=1)\n",
+    "\n",
+    "test_x = test.drop([\"Name\", \"ID\"], axis=1)"
+   ]
   }
  ],
  "metadata": {
