down with first run through of shelter

--- a/in_progress/shelter/submission.ipynb
+++ b/in_progress/shelter/submission.ipynb
@@ -1378,7 +1378,7 @@
    "source": [
     "## Construct the model\n",
     "\n",
-    "Let's"
+    "Let's try out a few models and see which works best through cross validation"
    ]
   },
   {
@@ -1411,7 +1411,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### XGB"
+    "### XGB (13.72084)"
    ]
   },
   {
@@ -1440,16 +1440,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SVC"
+    "### SVC (LB score: 15.44838)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.53602694  0.53934224  0.53586261]\n",
+      "\n",
+      "Average is ...\n",
+      "0.537077261685\n"
+     ]
+    }
+   ],
    "source": [
     "svc_model = SVC()\n",
     "svc_model.fit(train_x, train_y)\n",
@@ -1460,16 +1469,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### LGBM"
+    "### LGBM (LB score: 13.50678)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.6037037   0.5987204   0.59625098]\n",
+      "\n",
+      "Average is ...\n",
+      "0.599558360321\n"
+     ]
+    }
+   ],
    "source": [
     "lgbm_model = LGBMClassifier()\n",
     "lgbm_model.fit(train_x, train_y)\n",
@@ -1479,22 +1497,31 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Predictions"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "predictions = model.predict(test_x)"
+    "predictions = lgbm_model.predict(test_x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save predictions to CSV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1505,7 +1532,7 @@
     "    \"Euthanasia\": [1 if pred == \"Euthanasia\" else 0 for pred in predictions],\n",
     "    \"Return_to_owner\": [1 if pred == \"Return_to_owner\" else 0 for pred in predictions],\n",
     "    \"Transfer\": [1 if pred == \"Transfer\" else 0 for pred in predictions]\n",
-    "}).to_csv('../../submissions/shelter_svc.csv',index=False)"
+    "}).to_csv('../../submissions/shelter_lgbm.csv',index=False)"
    ]
   },
   {
