--- a/in_progress/shelter/3_voting.ipynb
+++ b/in_progress/shelter/3_voting.ipynb
@@ -1570,6 +1570,8 @@
    "source": [
     "### SVC\n",
     "\n",
+    "WARNING: GridSearchCV takes forever!!\n",
+    "\n",
     "tried\n",
     "\n",
     "{'kernel': ['rbf'], \n",
@@ -1590,6 +1592,13 @@
      "text": [
       "Fitting 3 folds for each of 28 candidates, totalling 84 fits\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed: 83.1min\n"
+     ]
     }
    ],
    "source": [
@@ -1598,7 +1607,7 @@
     "                  'gamma': [ 0.001, 0.01, 0.1, 1],\n",
     "                  'C': [1, 10, 50, 100,200,300, 1000]}\n",
     "\n",
-    "gsSVMC = GridSearchCV(SVMC,param_grid = svc_param_grid, cv=kfold, scoring=\"accuracy\", n_jobs= 4, verbose = 1)\n",
+    "gsSVMC = GridSearchCV(SVMC,param_grid = svc_param_grid, cv=kfold, scoring=\"accuracy\", verbose = 1)\n",
     "\n",
     "gsSVMC.fit(train_x, train_y)\n",
     "\n",
